@@ -38,6 +38,7 @@ import com.bakdata.conquery.models.types.ResultType;
 import com.bakdata.conquery.models.worker.LocalNamespace;
 import com.bakdata.conquery.models.worker.Namespace;
 import com.bakdata.conquery.util.NonPersistentStoreFactory;
+import com.bakdata.conquery.util.TestNamespacedStorageProvider;
 import io.dropwizard.jersey.validation.Validators;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
@@ -54,15 +55,15 @@ public class DefaultColumnNameTest {
 
 	private static final BiFunction<TestConcept, CQConcept, Select> CONCEPT_SELECT_SELECTOR =
 			(concept, cq) -> {
-				final UniversalSelect select = concept.getSelects().get(0);
+				final UniversalSelect select = concept.getSelects().getFirst();
 				cq.setSelects(List.of(select.getId()));
 				return select;
 			};
 
 	private static final BiFunction<TestConcept, CQConcept, Select> CONNECTOR_SELECT_SELECTOR =
 			(concept, cq) -> {
-				final Select select = concept.getConnectors().get(0).getSelects().get(0);
-				cq.getTables().get(0).setSelects(List.of((ConnectorSelectId) select.getId()));
+				final Select select = concept.getConnectors().getFirst().getSelects().getFirst();
+				cq.getTables().getFirst().setSelects(List.of((ConnectorSelectId) select.getId()));
 				return select;
 			};
 
@@ -170,7 +171,7 @@ public class DefaultColumnNameTest {
 
 
 	private static class TestCQConcept extends CQConcept {
-		private static CQConcept  create(boolean withLabel, TestConcept concept) {
+		private static CQConcept create(boolean withLabel, TestConcept concept) {
 			CQConcept cqConcept = new CQConcept();
 			if (withLabel) {
 				cqConcept.setLabel("TestCQLabel");
@@ -184,10 +185,8 @@ public class DefaultColumnNameTest {
 			if (elements.isEmpty()) {
 				elements = List.of(concept);
 			}
-			final List<ConceptElementId<?>> list = (List<ConceptElementId<?>>) elements.stream().map(ConceptElement::getId).toList();
-			cqConcept.setElements(
-					list
-			);
+			final List<ConceptElementId<?>> list = elements.stream().<ConceptElementId<?>>map(ConceptElement::getId).toList();
+			cqConcept.setElements(list);
 
 			List<CQTable> tables = concept.getConnectors().stream()
 										  .map(con -> {
@@ -216,21 +215,22 @@ public class DefaultColumnNameTest {
 
 		private final BiFunction<TestConcept, CQConcept, Select> selectExtractor;
 
-		private TestConcept(BiFunction<TestConcept, CQConcept, Select> selectExtractor) {
-			final NamespaceStorage NS_ID_RESOLVER = new NonPersistentStoreFactory().createNamespaceStorage();
+		private TestConcept(BiFunction<TestConcept, CQConcept, Select> selectExtractor) throws Exception {
+			final NamespaceStorage storage = new NonPersistentStoreFactory().createNamespaceStorage();
+
 			this.selectExtractor = selectExtractor;
 			setName("TestConceptName");
 			setLabel("TestConceptLabel");
-			Dataset DATASET = new Dataset() {
-				{
-					setName("test_" + DATASET_COUNTER.getAndIncrement());
-					setNamespacedStorageProvider(NS_ID_RESOLVER);
-					NS_ID_RESOLVER.updateDataset(this);
-				}
-			};
-			setDataset(DATASET.getId());
+			Dataset dataset = new Dataset("test_" + DATASET_COUNTER.getAndIncrement());
 
-			NS_ID_RESOLVER.updateConcept(this);
+			dataset.setStorageProvider(new TestNamespacedStorageProvider(storage));
+			storage.updateDataset(dataset);
+
+			setNamespacedStorageProvider(storage);
+
+			init();
+
+			storage.updateConcept(this);
 
 			setSelects(List.of(new TestUniversalSelect(this)));
 		}
